<resources>
    <string name="app_name">Homework17</string>
    <string name="fyneen">Fyneen</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="dashboard">Dashboard</string>
    <string name="pesan">Pesan</string>
    <string name="notifications">Notifications</string>
    <string name="kalendar">Kalendar</string>
    <string name="statistic">Statistic</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>