<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_baseline_space_dashboard_24"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/nav_pesan"
        android:icon="@drawable/ic_baseline_markunread_mailbox_24"
        android:title="@string/pesan"/>
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/notifications"/>
    <item
        android:id="@+id/nav_Calendar"
        android:icon="@drawable/ic_baseline_space_dashboard_24"
        android:title="@string/kalendar"/>

    <item
        android:id="@+id/nav_statistic"
        android:icon="@drawable/ic_baseline_query_stats_24"
        android:title="@string/statistic"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>
</menu>